--- a/tester.js/css/style.css
+++ b/tester.js/css/style.css
@@ -25,15 +25,14 @@ img {
     display: none;
 } */
 
-.olo {
-    width: 80%;
-    padding: 4rem;
-    margin: auto;
-    background-color: coral;
-    margin-bottom: 2rem;
-}
 
 .blank {
     min-height: 100%;
     min-height: 100vh;
+    background-color: #383B40;
+}
+
+.loading div span{
+    width: 2rem;
+    height: 2rem;
 }
